--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@ s0.parentNode.insertBefore(s1,s0);
            </div>
           <div class="col-md-5">
             <ul class="footer-nav-link">
-              <li><a href="https://www.facebook.com/media360hub"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/offx.itstty"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a></li>
 
-              <li><a href="https://www.instagram.com/media360hub/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://instagram.com/offx.itstty?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
 
               <li><a href="https://twitter.com/media360hub"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
 
